# knn_cuda

./: CMakeLists.txt  README.md
include/: csv_utils.h  knn_classifier.h  knn_cuda.h
python_code/: generate_data.py  test.ipynb
src/: csv_utils.cpp  knn_classifier.cpp  knn_cuda.cu  main.cpp
